fixed quote mark location on mobile

--- a/src/styles/generated-image.scss
+++ b/src/styles/generated-image.scss
@@ -185,11 +185,11 @@ div#generated-image {
 
       .blurb {
         span.quote-mark {
-          top: -10px;
+          top: -35px;
           left: 10px;
         }
         h3 {
-          padding: 5px 30px;
+          padding: 15px 30px;
           font-size: 9px;
         }
       }
